[package]
name = "greenfield-sdk-proto"
version = "0.1.0"
license = "MITApache-2.0"
repository = "https://github.com/cosmos/cosmos-rust/tree/main/cosmos-sdk-proto"
description = "Rust crate for interacting with Protobufs defined by the greenfield SDK."
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["blockchain", "cosmos", "tendermint", "proto", "greenfield", "BNB"]
edition = "2021"
rust-version = "1.63"

[dependencies]
prost = "0.11"
prost-types = "0.11"
tendermint-proto = "0.32"

# Optional dependencies
tonic = { version = "0.9", optional = true, default-features = false, features = ["codegen", "prost"] }

[features]
default = ["grpc-transport"]
grpc = ["tonic"]
grpc-transport = ["grpc", "tonic/transport"]
cosmwasm = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
